@@ -30,6 +30,8 @@ Zope Changes
       - Collector #1999: fixed broken FTP rename functionality
         (RNFR now returns 350 as status code instead 250)
 
+      - Collector #2002: fixed broken 'ls -R' functionality (didn't
+        recurse properly subclasses of OFS.Folder)
 
   Zope 2.8.5 (2005/12/19)
 
